Dialog headers now have narrower margins (= room location correction upload dialog title not truncated any more).

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -243,3 +243,8 @@ html, body {
   position: absolute;
   top: 88px;
 }
+
+.ui-header .ui-title, .ui-footer .ui-title {
+  margin-left: 15px;
+  margin-right: 15px;
+}
